Added selectize package for collaboration select input.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,6 +7,9 @@
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+// Selectize 
+@import "node_modules/selectize/dist/css/selectize.bootstrap3";
+
 // Custom Helper Classes
 @import "helpers/colors/background";
 @import "helpers/colors/text";
